sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: not found: value getNombreVAleurs
  var magouille1=getNombreVAleurs(0)
                 ^AlgBubbleSort1:10: error: not found: value getNombreVAleurs
  var magouille2=getNombreVAleurs(1)
                 ^AlgBubbleSort1:11: error: not found: value getNombreVAleurs
  var magouille3=getNombreVAleurs(2)
                 ^AlgBubbleSort1:12: error: not found: value getNombreVAleurs
  var magouille4=getNombreVAleurs(3)
                 ^AlgBubbleSort1:13: error: not found: value getNombreVAleurs
  var magouille5=getNombreVAleurs(4)
                 ^AlgBubbleSort1:14: error: not found: value getNombreVAleurs
  var magouille6=getNombreVAleurs(5)
                 ^