sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var longueur=0
  longueur=getNombreValeurs()-2
  var i=0
  var k=0
  var pos1=0
  var pos2=0
  var magouille1=getNombreVAleurs(0)
  var magouille2=getNombreVAleurs(1)
  var magouille3=getNombreVAleurs(2)
  var magouille4=getNombreVAleurs(3)
  var magouille5=getNombreVAleurs(4)
  var magouille6=getNombreVAleurs(5)
  while (k!=longueur){
    for(i<- 0 to longueur-k){
      pos1=i
      pos2=i+1
      if (plusPetit(pos2,pos1)){
        echange(pos1,pos2)
      }
  	}
    k+=1
  }  
}